--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to Encrypt</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/all.css">
     <link rel="shortcut icon" href="images/encrypt.png" type="image/x-icon">
@@ -21,7 +20,7 @@
             </div>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">Tech-lang</a></li>
+                <li><a href="#tech-lang">Tech-lang</a></li>
                 <li><a href="#">Domains</a></li>
                 <li><a href="#">Tools</a> </li>
             </ul>
@@ -32,7 +31,7 @@
 
     <div class="content">
         <img src="images/work.png" alt="work">
-        <h1>Welcome To Encrypt!</h1>
+        
     </div>
 
 
